<resources>
    <string name="app_name">FoodyVersion1</string>
    <string name="plus">+</string>
    <string name="moinhat">Mới nhất</string>
    <string name="danhmuc">Danh mục</string>
    <string name="tphcm">TP.HCM</string>
    <string name="huy">Hủy</string>
    <string name="BuiThiNghe">Bùi Thị Nghé</string>
    <string name="duong">33 đường</string>
    <string name="doitinhthanh">Đổi tỉnh thành</string>
    <string name="chontinh_thanhpho">"Chọn Tỉnh/Thành phố</string>
    <string name="xong">Xong</string>
    <string name="timnhanh">Tìm nhanh</string>
    <string name="tudongxacdinhvitri">Tự động xác định vị trí</string>
    <string name="VietNam">Việt Nam</string>
    <string name="doiquocgia">Đổi quốc gia</string>
    <string name="datmuahang">Đặt mua hàng</string>
</resources>
